remove duplicate piscine section with home page in nos-realisations page

--- a/src/nos-realisations.html
+++ b/src/nos-realisations.html
@@ -288,62 +288,6 @@ keywords:
   </div>
 </section>
 
-
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Nos réalisations&nbsp;</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Construction d’une
-            piscine municipale</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0001.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0003.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0004.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0005.jpg" alt="" class="menu_image-owl2">
-            </div>
-
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0008.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0024.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0025.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0026.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0027.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0028.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0029.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/municipale/IMG-20241008-WA0031.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
 <section class="menu section pt-0">
   <div class="container-fluid">
     <div class="row">
@@ -407,29 +351,37 @@ keywords:
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
             <div class="menu_image">
-              <img src="./assets/img/constructionn/21836723-9128-45F8-A245-5A3C72EDE020.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/21836723-9128-45F8-A245-5A3C72EDE020.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/constructionn/26214680-7A9F-435C-80F9-FC97A33C9CAF.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/26214680-7A9F-435C-80F9-FC97A33C9CAF.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/constructionn/2c92c9fb-b6c2-41b2-a853-4990f9b8a0dd.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/2c92c9fb-b6c2-41b2-a853-4990f9b8a0dd.JPG" alt=""
+                class="menu_image-owl2">
             </div>
 
             <div class="menu_image">
-              <img src="./assets/img/constructionn/383EF1D7-7D6F-4360-9CAB-18CE540DBD0F.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/383EF1D7-7D6F-4360-9CAB-18CE540DBD0F.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/constructionn/5615330B-BD45-4B9D-A820-8FB4066795DB.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/5615330B-BD45-4B9D-A820-8FB4066795DB.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/constructionn/6c9284df-834a-48fc-b347-069d99eda459.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/6c9284df-834a-48fc-b347-069d99eda459.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/constructionn/88064796-B8F3-4289-85F6-54B71E75E6A8.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/88064796-B8F3-4289-85F6-54B71E75E6A8.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/constructionn/b10e7406-b659-4a30-a54e-fc2805a38216.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/constructionn/b10e7406-b659-4a30-a54e-fc2805a38216.JPG" alt=""
+                class="menu_image-owl2">
             </div>
           </div>
         </div>
@@ -584,13 +536,16 @@ keywords:
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
             <div class="menu_image">
-              <img src="./assets/img/renovation2/bec6dd38-c928-43dc-98f3-695106188f68.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/renovation2/bec6dd38-c928-43dc-98f3-695106188f68.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/renovation2/c6b8dc59-6a20-487f-a31e-ed598b65d664.JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/renovation2/c6b8dc59-6a20-487f-a31e-ed598b65d664.JPG" alt=""
+                class="menu_image-owl2">
             </div>
             <div class="menu_image">
-              <img src="./assets/img/renovation2/ca494b7e-90db-4112-8f71-e9a0826f930b (1).JPG" alt="" class="menu_image-owl2">
+              <img src="./assets/img/renovation2/ca494b7e-90db-4112-8f71-e9a0826f930b (1).JPG" alt=""
+                class="menu_image-owl2">
             </div>
           </div>
         </div>
