--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
         <ul class="navbar-nav Navbar_nav w-100">
           <li class="nav-item Navbar_nav-item">
-            <a class="nav-link Navbar_nav-link" title="Accueil" href="./index.html">Accueil</a>
+            <a class="nav-link Navbar_nav-link" title="Accueil" href="./index.html">Accueil_</a>
           </li>
           <li class="nav-item Navbar_nav-item">
             <a class="nav-link Navbar_nav-link" title="Nos realisations" href="./nos-realisations.html"> Nos réalisations</a>
