- h2 modifications, logo updated

--- a/nos-realisations.html
+++ b/nos-realisations.html
@@ -58,12 +58,12 @@
     <nav class="navbar Navbar_main navbar-expand-lg fixedNav">
       <div class="container to-col">
         <div class="Navbar_image hide-on-active">
-          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
               class="Navbar_image-img" alt="Logo" /></a>
         </div>
 
         <div class="Navbar_image show-on-active">
-          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo-black.jpg"
+          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo-black.png"
               class="Navbar_image-img" alt="Logo" /></a>
         </div>
         <button class="navbar-toggler Navbar_toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -123,7 +123,7 @@
       <div class="col-md-12">
         <div class="menu_header">
           <h2 class="menu_header-title linear-after6">Renovation&nbsp;</h2>
-          <h2 class="menu_header-title2 pb-5 text-bg">&nbsp;&nbsp;d'une boutique</h2>
+          <h2 class="menu_header-title2 pb-5 text-bg">&nbsp;&nbsp;d'une boutique à Montmartre</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -219,7 +219,7 @@
       <div class="col-md-12">
         <div class="menu_header">
           <h2 class="menu_header-title linear-after6">Création</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;d'un escalier</h2>
+          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;d'un escalier béton</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -345,8 +345,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Surélévation de l'EHPAD</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;Rachel, à Saint-Leu-la-Forêt</h2>
+          <h2 class="menu_header-title linear-after6">Surélévation de l'EHPAD Rachel</h2>
+          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;à Saint-Leu-la-Forêt</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -614,6 +614,21 @@
   </div>
 </section>
 
+<section class="menu section pt-0">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="menu_header">
+          <h2 class="menu_header-title linear-after6">Chantier </h2>
+          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;en cours</h2>
+        </div>
+        <div class="p-releative">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
   </div>
   <div class="fixphone">
     <a href="tel:06 64 94 13 00" title="06 64 94 13 00" class="one phoneone">
@@ -646,7 +661,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="footer_image">
-            <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+            <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
                 class="footer_image-logo" alt="Logo" /></a>
           </div>
           <div class="footer_content2">
