--- a/404.html
+++ b/404.html
@@ -56,12 +56,12 @@
   <nav class="navbar Navbar_main navbar-expand-lg fixedNav">
     <div class="container to-col">
       <div class="Navbar_image hide-on-active">
-        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
           class="Navbar_image-img" alt="Logo" /></a>
       </div>
 
       <div class="Navbar_image show-on-active">
-        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo-black.jpg"
+        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo-black.png"
           class="Navbar_image-img" alt="Logo" /></a>
       </div>
       <button class="navbar-toggler Navbar_toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -139,7 +139,7 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="footer_image">
-          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
               class="footer_image-logo" alt="Logo" /></a>
         </div>
         <div class="footer_content2">
