--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
   <nav class="navbar Navbar_main navbar-expand-lg fixedNav">
     <div class="container to-col">
       <div class="Navbar_image hide-on-active">
-        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
           class="Navbar_image-img" alt="Logo" /></a>
       </div>
 
       <div class="Navbar_image show-on-active">
-        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo-black.jpg"
+        <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo-black.png"
           class="Navbar_image-img" alt="Logo" /></a>
       </div>
       <button class="navbar-toggler Navbar_toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -191,23 +191,24 @@
     <div class="">
         <section class="menu section">
   <div class="container-fluid">
+    <div class="menu_header">
+      <div class="spacer"></div>
+      <h2 class="menu_header-title slide-up">Nous sommes&nbsp;</h2>
+      <div class="spacer"></div>
+      <span class="black-after"></span>
+      <div class="spacer"></div>
+      <h2 class="menu_header-title2 slide-down">&nbsp;&nbsp;dmb construction</h2>
+      <div class="spacer"></div>
+    </div>
     <div class="row align-items-end">
       <div class="col-lg-6">
         <div class="menu_image">
-          <img src="./assets/img/background.png" alt="" class="menu_image-bg">
-          <img src="./assets/img/menu-1.jpeg" alt="" class="menu_image-img round">
+          <!-- <img src="./assets/img/background.png" alt="" class="menu_image-bg"> -->
+          <img src="./assets/img/menu-1.jpeg" alt="" class="w-100">
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="menu_header">
-          <div class="spacer"></div>
-          <h2 class="menu_header-title slide-up">Nous sommes&nbsp;</h2>
-          <div class="spacer"></div>
-          <span class="black-after"></span>
-          <div class="spacer"></div>
-          <h2 class="menu_header-title2 slide-down">&nbsp;&nbsp;dmb construction</h2>
-          <div class="spacer"></div>
-        </div>
+       
         <div class="menu_content">
           <h3 class="menu_content-title">Une entreprise de construction</h3>
           <div class="blur">
@@ -643,7 +644,7 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="footer_image">
-          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
               class="footer_image-logo" alt="Logo" /></a>
         </div>
         <div class="footer_content2">
