--- a/index.html
+++ b/index.html
@@ -200,12 +200,13 @@
       <h2 class="menu_header-title2 slide-down">&nbsp;&nbsp;dmb construction</h2>
       <div class="spacer"></div>
     </div>
-    <div class="row align-items-end">
-      <div class="col-lg-6">
-        <div class="menu_image">
-          <!-- <img src="./assets/img/background.png" alt="" class="menu_image-bg"> -->
+    <div class="row">
+      <div class="col-lg-6 img-container">
+        <!-- <img src="./assets/img/menu-1.jpeg" alt="" class="w-100"> -->
+        <!--<div class="menu_image w-100 img-container">
+           <img src="./assets/img/background.png" alt="" class="menu_image-bg"> 
           <img src="./assets/img/menu-1.jpeg" alt="" class="w-100">
-        </div>
+        </div>-->
       </div>
       <div class="col-lg-6">
        
