- changes in hp and nos realisation

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <h1 class="slider_content-title">
               Construisons ensemble votre vision
             </h1>
-            <p class="slider_content-p">Pro tout simplement - Depuis 2015</p>
+            <p class="slider_content-p">Pro tout simplement - Depuis 2016</p>
             <div class="slider_content-button">
               <a href="./contact.html" class="slider_content-button--a">
                 Nous Contacter
@@ -300,12 +300,11 @@
                   <span class="faq-icon">+</span>
                 </h3>
                 <p class="menu_faq-p" style="display: none;">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sapiente ea quisquam harum.
-                  Corrupti quod laborum repudiandae animi veritatis, fugit rem sapiente? Officiis minus harum ex porro
-                  velit cupiditate ad!
-                  Debitis aspernatur cumque ullam, dicta corporis ad, eius perferendis aut excepturi cum quibusdam
-                  nobis, esse quae! Minima, vero vel nostrum mollitia expedita tenetur repellat repellendus nesciunt
-                  labore dolorem quas animi.
+                    Forts de notre expertise reconnue en construction et rénovation, notre équipe dévouée transforme vos visions en réalité. 
+                    Chaque projet est abordé avec une attention méticuleuse aux détails, garantissant des résultats durables et esthétiques. 
+                    Notre approche transparente et notre communication ouverte assurent une collaboration fluide avec nos clients. 
+                    Chez DMB Construction, nous créons des environnements qui reflètent vos aspirations. Faites confiance à notre savoir-faire 
+                    pour des solutions qui dépassent vos attentes.
                 </p>
                 <hr>
               </div>
@@ -317,12 +316,11 @@
                   <span class="faq-icon">+</span>
                 </h3>
                 <p class="menu_faq-p" style="display: none;">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sapiente ea quisquam harum.
-                  Corrupti quod laborum repudiandae animi veritatis, fugit rem sapiente? Officiis minus harum ex porro
-                  velit cupiditate ad!
-                  Debitis aspernatur cumque ullam, dicta corporis ad, eius perferendis aut excepturi cum quibusdam
-                  nobis, esse quae! Minima, vero vel nostrum mollitia expedita tenetur repellat repellendus nesciunt
-                  labore dolorem quas animi.
+                    DMB Construction s'engage à respecter des normes strictes pour garantir des projets de qualité supérieure. 
+                    Nous veillons à ce que chaque réalisation soit conforme aux réglementations en vigueur. Notre équipe qualifiée 
+                    met un point d'honneur à utiliser des matériaux durables et des techniques innovantes, assurant ainsi la sécurité et la 
+                    pérennité de vos espaces. Faites confiance à notre rigueur pour des résultats irréprochables qui 
+                    répondent à vos exigences les plus élevées.
                 </p>
                 <hr>
               </div>
@@ -334,12 +332,10 @@
                   <span class="faq-icon">+</span>
                 </h3>
                 <p class="menu_faq-p" style="display: none;">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium sapiente ea quisquam harum.
-                  Corrupti quod laborum repudiandae animi veritatis, fugit rem sapiente? Officiis minus harum ex porro
-                  velit cupiditate ad!
-                  Debitis aspernatur cumque ullam, dicta corporis ad, eius perferendis aut excepturi cum quibusdam
-                  nobis, esse quae! Minima, vero vel nostrum mollitia expedita tenetur repellat repellendus nesciunt
-                  labore dolorem quas animi.
+                    DMB Construction se distingue par sa précision et son dévouement dans chaque projet. 
+                    Notre équipe passionnée accorde une attention minutieuse aux moindres détails, garantissant des finitions impeccables. 
+                    Nous nous engageons à respecter les délais et les budgets, tout en maintenant une communication transparente avec nos clients. 
+                    Faites confiance à notre expertise pour des résultats qui allient qualité et précision, transformant vos idées en espaces uniques et fonctionnels.
                 </p>
               </div>
             </div>
@@ -364,10 +360,28 @@
             
             <div class="item">
               <div class="image-container">
-                <img src="./assets/img/construction.JPG" alt="" class="menu_image-owl">
+                <img src="./assets/img/nos-services/construction-neuve.jpg" alt="" class="menu_image-owl">
               </div>
               <div class="text-container">
                 <p class="menu_image-owl--p">CONSTRUCTION NEUVE</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="image-container">
+                <img src="./assets/img/nos-services/renovation.JPG" alt="" class="menu_image-owl">
+              </div>
+              <div class="text-container">
+                <p class="menu_image-owl--p">RENOVATION</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="image-container">
+                <img src="./assets/img/nos-services/boutique.jpg" alt="" class="menu_image-owl">
+              </div>
+              <div class="text-container">
+                <p class="menu_image-owl--p">BOUTIQUE</p>
               </div>
             </div>
             
@@ -467,10 +481,14 @@
         <div class="col-md-5">
           <div class="projects_content">
             <h3 class="projects_content-title">Construction d’une piscine municipale</h3>
-            <p class="projects_content-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="projects_content-p">
+                DMB Construction est fière d'avoir réalisé la construction d'une piscine municipale. 
+                Nous avons créé un espace aquatique moderne et sécurisé, répondant aux normes les plus strictes. 
+                Chaque détail a été soigneusement pensé pour offrir confort et plaisir aux usagers.
+            </p>
+            <!-- <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
             <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
-            <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
-            <p class="projects_content-p">Etiam sodales ac felis id interdum</p>
+            <p class="projects_content-p">Etiam sodales ac felis id interdum</p> -->
           </div>
           <div class="mt-5">
             <a href="./nos-realisations.html" class="menu_content-link">VOIR NOS REALISATIONS</a>
