--- a/nos-realisations.html
+++ b/nos-realisations.html
@@ -116,6 +116,47 @@
         </div>
       </div>
     </section>
+
+    <section class="menu section pt-0">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="menu_header">
+              <h2 class="menu_header-title linear-after6">Création d'un appartement </h2>
+              <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;avec spa ( dans le Marais )</h2>
+            </div>
+            <div class="p-releative">
+              <div class="owl-carousel owl2 d-flex align-items-center">
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/1.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/2.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/3.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/4.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/5.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/6.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/7.jpg" alt="" class="menu_image-owl2">
+                </div>
+                <div class="menu_image">
+                  <img src="./assets/img/app_spa/8.jpg" alt="" class="menu_image-owl2">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
 <section class="menu section pt-0">
   <div class="container-fluid">
@@ -224,6 +265,24 @@
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
             <div class="menu_image">
+              <img src="./assets/img/creationn/creation-beton-1.jpg" alt="" class="menu_image-owl2">
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/creationn/creation-beton-2.jpg" alt="" class="menu_image-owl2">
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/creationn/creation-beton-3.jpg" alt="" class="menu_image-owl2">
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/creationn/creation-beton-4.jpg" alt="" class="menu_image-owl2">
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/creationn/creation-beton-5.jpg" alt="" class="menu_image-owl2">
+            </div>
+            <div class="menu_image">
+              <img src="./assets/img/creationn/creation-beton-6.jpg" alt="" class="menu_image-owl2">
+            </div>
+            <!-- <div class="menu_image">
               <img src="./assets/img/creationn/IMG_0387.jpeg" alt="" class="menu_image-owl2">
             </div>
             <div class="menu_image">
@@ -257,7 +316,7 @@
             </div>
             <div class="menu_image">
               <img src="./assets/img/creationn/IMG_3881.jpeg" alt="" class="menu_image-owl2">
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -422,46 +481,7 @@
   </div>
 </section>
 
-<section class="menu section pt-0">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Création d'un appartement </h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;avec spa ( dans le Marais )</h2>
-        </div>
-        <div class="p-releative">
-          <div class="owl-carousel owl2 d-flex align-items-center">
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/1.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/2.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/3.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/4.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/5.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/6.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/7.jpg" alt="" class="menu_image-owl2">
-            </div>
-            <div class="menu_image">
-              <img src="./assets/img/app_spa/8.jpg" alt="" class="menu_image-owl2">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 
 <section class="menu section pt-0">
   <div class="container-fluid">
