- image modifications in pages

--- a/nos-prestations.html
+++ b/nos-prestations.html
@@ -183,7 +183,7 @@
         <div class="menu_image">
           <div class="menu_image-black2">
           </div>
-          <img src="./assets/img/construction.JPG" alt="" class="menu_image-img4">
+          <img src="./assets/img/nos-services/construction-neuve.jpg" alt="" class="menu_image-img4">
         </div>
       </div>
     </div>
@@ -199,7 +199,7 @@
           <span class="linear-before41"  ></span>
           <div class="menu_image-black3">
           </div>
-          <img src="./assets/img/removation.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/rehabilitation.jpg" alt="" class="menu_image-img4">
         </div>
       </div>
       <div class="col-lg-6">
@@ -285,7 +285,7 @@
           <span class="linear-before41"  ></span>
           <div class="menu_image-black3">
           </div>
-          <img src="./assets/img/genie.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/nos-services/genie-infrastructure.jpg" alt="" class="menu_image-img4">
         </div>
       </div>
       <div class="col-lg-6">
@@ -357,7 +357,7 @@
           <span class="linear-before66"  ></span>
           <div class="menu_image-black2">
           </div>
-          <img src="./assets/img/pool.jpeg" alt="" class="menu_image-img4">
+          <img src="./assets/img/installation.jpg" alt="" class="menu_image-img4">
         </div>
       </div>
     </div>
