- fixed image on hp

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       <h2 class="menu_header-title2 slide-down">&nbsp;&nbsp;dmb construction</h2>
       <div class="spacer"></div>
     </div>
-    <div class="row">
-      <div class="col-lg-6 img-container">
-        <!-- <img src="./assets/img/menu-1.jpeg" alt="" class="w-100"> -->
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <img src="./assets/img/nous-sommes.png" alt="" class="w-100">
         <!--<div class="menu_image w-100 img-container">
            <img src="./assets/img/background.png" alt="" class="menu_image-bg"> 
           <img src="./assets/img/menu-1.jpeg" alt="" class="w-100">
@@ -210,7 +210,7 @@
       </div>
       <div class="col-lg-6">
        
-        <div class="menu_content">
+        <div class="menu_content mt-5 mt-md-0">
           <h3 class="menu_content-title">Une entreprise de construction</h3>
           <div class="blur">
             <p class="menu_content-p">
@@ -226,10 +226,12 @@
             </div>
           </div>
         </div>
+        <hr class="bbhr custom-line">
       </div>
+
     </div>
   </div>
-  <hr class="bbhr">
+  
 </section>
 
 <section class="mene pt-0">
