--- a/nos-realisations.html
+++ b/nos-realisations.html
@@ -533,7 +533,7 @@
       <div class="col-md-12">
         <div class="menu_header">
           <h2 class="menu_header-title linear-after6">Rénovation d'une façade</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;et d'une pierre de taille.  PARIS 10</h2>
+          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;et d'une pierre de taille PARIS 10</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
@@ -571,8 +571,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="menu_header">
-          <h2 class="menu_header-title linear-after6">Mise en sécurité d'un incendie</h2>
-          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;renforcement et toiture à Villemomble</h2>
+          <h2 class="menu_header-title linear-after6">Mise en sécurité</h2>
+          <h2 class="menu_header-title2 text-bg">&nbsp;&nbsp;d'un appartement à Villemomble</h2>
         </div>
         <div class="p-releative">
           <div class="owl-carousel owl2 d-flex align-items-center">
